# cpp_game_engine

./: .gitmodules  CMakeLists.txt  README.md  Sandbox.data  Sandbox.js  Sandbox.wasm  build_browser.bat  build_browser.ps1  build_windows.bat  build_windows_debug.bat  build_windows_release.bat  extend_web_assembly.ps1  index.html  install_emsdk.bat  install_ninja.bat
GameEngine/: CMakeLists.txt
GameEngine/includes/: GameEngine.h
GameEngine/includes/Core/: OrthographicCameraController.h
GameEngine/includes/Core/EventsSystem/: EventManager.h  Keyboard.h  KeyboardEvent.h  KeyboardEventType.h  Mouse.h  MouseEvent.h  MouseEventType.h  WindowEvent.h  WindowEventType.h
GameEngine/includes/Core/GraphicsEngine/: GraphicsAPI.h  GraphicsEngine.h  OrthographicCameraController.h  Window.h  WindowFactory.h
GameEngine/includes/Core/GraphicsEngine/Assets/: ShaderProgram.h  ShaderProgramFactory.h  Sprite.h  Spritesheet.h  Texture.h  TextureFactory.h
GameEngine/includes/Core/GraphicsEngine/Renderer/: BufferElement.h  BufferElementType.h  BufferFactory.h  BufferLayout.h  Camera.h  GraphicsContext.h  GraphicsContextFactory.h  IndexBuffer.h  IndexStaticBuffer.h  OrthographicCamera.h  Renderer.h  Renderer2D.h  RendererAPI.h  RendererAPIFactory.h  ShaderCodeFactory.h  ShaderProgram.h  ShaderProgramFactory.h  VertexBuffer.h  VertexStaticBuffer.h
GameEngine/includes/ECS/: Entity.h  Registry.h  RegistryFactory.h  Scene.h  ScriptableEntity.h
GameEngine/includes/ECS/Components/: CameraComponent.h  ColorComponent.h  Component.h  CppScriptComponent.h  QuadComponent.h  SpriteComponent.h  StateMachine2DAnimationComponent.h  TextureComponent.h  TransformComponent.h
GameEngine/includes/ECS/Systems/: ColorSystem.h  System.h
GameEngine/includes/Engine/: Engine.h
GameEngine/includes/Engine/EventsSystem/: Keyboard.h  KeyboardEvent.h  KeyboardEventType.h
GameEngine/includes/Engine/Support/: Core.h  Log.h
GameEngine/includes/EventsSystem/: EventManager.h  KeyboardEvent.h  KeyboardEventType.h  Mouse.h  MouseEvent.h  Window.h  WindowEvent.h
GameEngine/includes/Math/: Vector2.h  Vector3.h
GameEngine/includes/Memory/: CacheStorage.h  TimedCache.h
GameEngine/includes/Tools/: Layer.h  LayerStack.h  Log.h  Time.h
GameEngine/includes/Tools/Math/: Vector.h  Vector2.h  Vector3.h  Vector4.h
GameEngine/includes/Tools/Memory/: CacheStorage.h  TimedCache.h
GameEngine/src/: ExitCodes.h  GameEngine.cpp
GameEngine/src/Core/: OrthographicCameraController.cpp
GameEngine/src/Core/EventsSystem/: EventManager.cpp  Keyboard.cpp  KeyboardEvent.cpp  Mouse.cpp  MouseEvent.cpp  Window.cpp  WindowEvent.cpp
GameEngine/src/Core/GraphicsEngine/: GraphicsEngine.cpp  OrthographicCameraController.cpp  Window.cpp  WindowFactory.cpp
GameEngine/src/Core/GraphicsEngine/Assets/: ShaderProgram.cpp  ShaderProgramFactory.cpp  Sprite.cpp  Spritesheet.cpp  Texture.cpp  TextureFactory.cpp
GameEngine/src/Core/GraphicsEngine/DirectX/: DirectX11Context.cpp  DirectX11Context.h  DirectX12Context.cpp  DirectX12Context.h
GameEngine/src/Core/GraphicsEngine/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLIndexStaticBuffer.cpp  OpenGLIndexStaticBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArrayBuffer.cpp  OpenGLVertexArrayBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexDynamicBuffer.cpp  OpenGLVertexDynamicBuffer.h  OpenGLVertexStaticBuffer.cpp  OpenGLVertexStaticBuffer.h
GameEngine/src/Core/GraphicsEngine/Renderer/: BufferElement.cpp  BufferFactory.cpp  BufferLayout.cpp  Camera.cpp  GraphicsContext.cpp  GraphicsContextFactory.cpp  IndexBuffer.cpp  IndexStaticBuffer.cpp  OrthographicCamera.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  RendererAPIFactory.cpp  ShaderCodeFactory.cpp  ShaderProgram.cpp  ShaderProgramFactory.cpp  VertexArrayBuffer.cpp  VertexBuffer.cpp  VertexStaticBuffer.cpp
GameEngine/src/Core/GraphicsEngine/WebGL/: WebGLContext.cpp  WebGLContext.h  WebGLFrameBuffer.cpp  WebGLFrameBuffer.h  WebGLIndexStaticBuffer.cpp  WebGLIndexStaticBuffer.h  WebGLRenderer.cpp  WebGLRenderer.h  WebGLShaderProgram.cpp  WebGLShaderProgram.h  WebGLTexture.cpp  WebGLTexture.h  WebGLVertexArrayBuffer.cpp  WebGLVertexArrayBuffer.h  WebGLVertexDynamicBuffer.cpp  (+3 more)
GameEngine/src/Core/Platform/: BrowserWindow.cpp  BrowserWindow.h  WindowsWindow.cpp  WindowsWindow.h
GameEngine/src/ECS/: Entity.cpp  Registry.cpp  RegistryFactory.cpp  Scene.cpp
GameEngine/src/ECS/Systems/: ColorSystem.cpp  System.cpp
GameEngine/src/ECS/entt/: EnttEntity.cpp  EnttEntity.h  EnttRegistry.cpp  EnttRegistry.h
GameEngine/src/Engine/: Engine.cpp
GameEngine/src/Engine/EventsSystem/: Keyboard.cpp  KeyboardEvent.cpp
GameEngine/src/Engine/Support/: Log.cpp
GameEngine/src/EventsSystem/: EventManager.cpp  Keyboard.cpp  KeyboardEvent.cpp  Mouse.cpp  MouseEvent.cpp  Window.cpp  WindowEvent.cpp
GameEngine/src/Math/: Vector.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
GameEngine/src/Memory/: CacheStorage.cpp  TimedCache.cpp
GameEngine/src/Tools/: Layer.cpp  LayerStack.cpp  Log.cpp  Time.cpp
GameEngine/src/Tools/Math/: Vector.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
GameEngine/src/Tools/Memory/: CacheStorage.cpp  TimedCache.cpp
Sandbox/: CMakeLists.txt  server.py
Sandbox/assets/shaders/: color_shader_opengl.glsl  color_shader_webgl.glsl  default_2d_shader_opengl.glsl  default_2d_shader_webgl.glsl  fixed_full_screen_texture_shader_opengl.glsl  fixed_full_screen_texture_shader_webgl.glsl  texture_shader_opengl.glsl  texture_shader_webgl.glsl
Sandbox/includes/Layers/: TestLayer.h
Sandbox/includes/Renderer/: FixedFullScreenTextureRenderer.h
Sandbox/includes/Scripts/: CameraController.h  Rotation.h
Sandbox/src/: Sandbox.cpp
Sandbox/src/Layers/: TestLayer.cpp
Sandbox/src/Renderer/: FixedFullScreenTextureRenderer.cpp
Sandbox/src/Scripts/: CameraController.cpp  Rotation.cpp
Tests/: CMakeLists.txt
Tests/src/: MathTests.cpp
(+22 files in other folders)
